--- a/assets/ui/show_dialog.ui
+++ b/assets/ui/show_dialog.ui
@@ -13,7 +13,13 @@
   <property name="windowTitle">
    <string>Show Dialog</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../resources.qrc">
+    <normaloff>:/images/window_icon.png</normaloff>:/images/window_icon.png</iconset>
+  </property>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
