--- a/assets/ui/show_dialog.ui
+++ b/assets/ui/show_dialog.ui
@@ -68,6 +68,10 @@
    <property name="text">
     <string>Pass</string>
    </property>
+   <property name="icon">
+    <iconset resource="../resources.qrc">
+     <normaloff>:/images/pass_icon.png</normaloff>:/images/pass_icon.png</iconset>
+   </property>
   </widget>
   <widget class="QPushButton" name="fail_button">
    <property name="geometry">
@@ -80,6 +84,10 @@
    </property>
    <property name="text">
     <string>Fail</string>
+   </property>
+   <property name="icon">
+    <iconset resource="../resources.qrc">
+     <normaloff>:/images/fail_icon.png</normaloff>:/images/fail_icon.png</iconset>
    </property>
   </widget>
  </widget>
