--- a/assets/ui/show_dialog.ui
+++ b/assets/ui/show_dialog.ui
@@ -52,7 +52,8 @@
         </font>
        </property>
        <property name="text">
-        <string>Description</string>
+        <string>Description
+multiline</string>
        </property>
       </widget>
      </item>
