--- a/tests/assets/stylesheets/style_01.css
+++ b/tests/assets/stylesheets/style_01.css
@@ -1,5 +1,7 @@
 /*
-Default style.
+Test stylesheet.
+
+See `tests/libs/README.md` on how to update the resources file when this file is updated.
  */
 
 QLabel#title_label {
