--- a/assets/ui/show_dialog.ui
+++ b/assets/ui/show_dialog.ui
@@ -58,6 +58,36 @@ multiline</string>
       </widget>
      </item>
      <item>
+      <widget class="QProgressBar" name="timeout_progress_bar">
+       <property name="sizeIncrement">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="baseSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <family>Consolas</family>
+         <pointsize>20</pointsize>
+         <bold>false</bold>
+         <kerning>true</kerning>
+        </font>
+       </property>
+       <property name="value">
+        <number>24</number>
+       </property>
+       <property name="textVisible">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
       <layout class="QHBoxLayout" name="buttons_h_layout">
        <item>
         <widget class="QPushButton" name="fail_button">
