--- a/assets/ui/show_dialog.ui
+++ b/assets/ui/show_dialog.ui
@@ -98,7 +98,11 @@ multiline</string>
         </font>
        </property>
        <property name="text">
-        <string>+</string>
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../resources.qrc">
+         <normaloff>:/images/plus_icon.png</normaloff>:/images/plus_icon.png</iconset>
        </property>
       </widget>
      </item>
