--- a/assets/stylesheets/style_01.css
+++ b/assets/stylesheets/style_01.css
@@ -1,21 +1,3 @@
 /*
-Default style.
+No style applied.
  */
-
-QLabel#title_label {
-    color: blue;
-}
-
-QLabel#description_label {
-    color: rgb(0, 0, 50);
-}
-
-QPushButton#pass_button {
-    color : green;
-    /*background-color : gray;*/
-}
-
-QPushButton#fail_button {
-    color : red;
-    /*background-color : green;*/
-}
