--- a/assets/stylesheets/style_02.css
+++ b/assets/stylesheets/style_02.css
@@ -2,6 +2,11 @@
 Default style.
  */
 
+/* Default for all widgets */
+QWidget {
+    font-size: 50px;
+}
+
 QLabel#title_label {
     color: blue;
 }
